--- a/Template.phtml
+++ b/Template.phtml
@@ -17,7 +17,7 @@
 
     <script src="{PATH_PUBLIC}sb/bower_components/jquery/dist/jquery.min.js"></script>
 
-    <script src="{PATH}changeTable.js"></script>
+    <script src="{PATH}jff.js"></script>
 </head>
 <body>
     <div id="wrapper">
