--- a/app/views/404.phtml
+++ b/app/views/404.phtml
@@ -15,7 +15,7 @@
             ?>
             <p>Por favor, entre em contato com o administrador do sistema.</p>
 
-            <a href="<?php echo PATH; ?>" class="btn btn-large btn-info">
+            <a href="{PATH}" class="btn btn-large btn-info">
                 <i class="icon-home icon-white"></i>HOME</a>
         </div>
     </div>
