--- a/app/views/Home.phtml
+++ b/app/views/Home.phtml
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <h1 class="page-header">Bem Vindo
-            <strong><?php echo Session::getFrom('Login','Apelido'); ?></strong>.
+            <strong>{USU_APELIDO}</strong>.
             <small> <br />Tenha um dia bem "humor delícia"!</small>
         </h1>
     </div>
