--- a/Template.phtml
+++ b/Template.phtml
@@ -33,6 +33,47 @@
                 <a class="navbar-brand" href="{PATH}"><i class="fa fa-home"></i> HOME</a>
             </div>
 
+            <ul class="nav navbar-nav">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Cadastros
+                        <i class="fa fa-caret-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#"></i>Fornecedores</a></li>
+                        <li><a href="#"></i>Cidades</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#"></i>Usuários</a></li>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Movimentações
+                        <i class="fa fa-caret-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#"></i>Fornecedores</a></li>
+                        <li><a href="#"></i>Cidades</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#"></i>Usuários</a></li>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Relatórios
+                        <i class="fa fa-caret-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#"></i>Fornecedores</a></li>
+                        <li><a href="#"></i>Cidades</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#"></i>Usuários</a></li>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+
             <ul class="nav navbar-top-links navbar-right">
                 <!-- Usuário -->
                 <li class="dropdown">
